--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,34 +28,10 @@ html {
   --overlay-bg: rgba(36, 39, 59, 0.3);
   --scrollbar-bg: rgb(1 2 3 / 40%);
  }
-/* body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    
-} */
-/* body {
-  font-family: var(--body-font);
-  background-image: url(https://wallpapershome.com/images/wallpapers/macos-big-sur-1280x720-dark-wwdc-2020-22655.jpg);
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 2em;
-  width: 100%;
-  height: 100vh;
-  @media screen and (max-width: 480px) {
-   padding: 0.8em;
-  }
- } */
+
  body {
   margin: 0;
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
+  overflow: scroll;
   background-image: url("https://user-images.githubusercontent.com/26748614/96337246-f14d4580-1085-11eb-8793-a86d929e034d.jpg");
   background-size: cover;
   backdrop-filter:  brightness(50%);
@@ -69,6 +45,7 @@ a {
 * {
   box-sizing: border-box;
   outline: none;
+  color: white;
 }
 ::-webkit-scrollbar {
  width: 6px;
@@ -79,12 +56,24 @@ a {
  background: var(--scrollbar-bg);
  border-radius: 10px;
 }
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@keyframes typing {
+	from { width: 0 ;}
+	to { width: 100% ;}
   }
-  body {
-    color: white;
-    background: black;
-  }
-} */
+.text1{
+  color: white;
+  z-index: 30;
+	position: absolute;
+	left:calc(15vw - 100px);
+	font-size: 45px;
+	top:calc(50% - 30px);
+	width: 0;
+	font-family: Tangerine,'Times New Roman', Times, serif;
+	overflow: hidden; /* Ensures the content is not revealed until the animation */ /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  max-width: 1600px;
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 10s infinite 10s
+}
