--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,12 +1,15 @@
 
     .footer{
-    background:#000;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    padding:30px 0px;
-    font-family: 'Play', sans-serif;
-    text-align:center;
+        background:black;
+        position: fixed;
+        bottom: -350px;
+        height: max-content;
+        height: 300px;
+        width: 100%;
+        padding:30px 0px;
+        font-family: 'Play', sans-serif;
+        text-align:center;
+        z-index: 800;
     }
     
     .footer .row{
@@ -22,12 +25,10 @@
     }
     .logo{
         cursor: pointer;
-        /* -webkit-filter: grayscale(100%); Safari 6.0 - 9.0 */
-        /* filter: grayscale(100%); */
         transition: cubic-bezier(.34,-0.02,.43,.97) 0.3s;
     }
     .logo:hover{
-        -webkit-filter: none; /* Safari 6.0 - 9.0 */
+        -webkit-filter: none;
         filter: none;
         scale: 1.2;
     }
