--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -6,6 +6,7 @@
     height: 58px;
     width: 100%;
     border-bottom: 1px solid var(--border-color);
+    background-color: transparent;
     padding: 0 30px;
     white-space: nowrap;
     z-index: 10;
