--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,13 @@
-/* html {
-  background: radial-gradient(ellipse at bottom, black 0%, rgb(35, 35, 35) 100%);
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-} */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
  }
 :root {
+  --user-button-circle: rgba(0,0,0,0.025);
+  --user-button-cardborder: rgba(255,255,255,0.25);
+  --user-button-text:#323133;
+  --user-button-shadow:rgba(0,0,0,0.1);
   --theme-bg-color: rgba(16 18 27 / 40%);
   --border-color: rgba(113 119 144 / 25%);
   --theme-color: #f9fafb;
@@ -32,9 +28,8 @@ html {
  body {
   margin: 0;
   overflow: scroll;
-  background-image: url("https://user-images.githubusercontent.com/26748614/96337246-f14d4580-1085-11eb-8793-a86d929e034d.jpg");
-  background-size: cover;
   backdrop-filter:  brightness(50%);
+  background-color: black;
 }
 
 a {
@@ -64,7 +59,8 @@ a {
   color: white;
   z-index: 30;
 	position: absolute;
-	left:calc(15vw - 100px);
+	left:calc(13vw);
+  right: calc(87vw);
 	font-size: 45px;
 	top:calc(50% - 30px);
 	width: 0;
@@ -75,5 +71,30 @@ a {
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 10s infinite 10s
+    typing 10s forwards 1s
 }
+.text2{
+  display: flex;
+  flex-direction: column;
+  color: white;
+  z-index: 30;
+	position: absolute;
+	left:calc(13vw);
+  right: calc(87vw);
+	font-size: 24px;
+	top:calc(10% - 30px);
+  height:auto;
+  background-color: #999ba5;
+	font-family: Tangerine,'Times New Roman', Times, serif;
+  line-break: normal;
+  overflow-wrap: break-word;
+	overflow:hidden; /* Ensures the content is not revealed until the animation */ /* The typwriter cursor */
+  white-space: pre-wrap; /* Keeps the content on a single line */
+  text-align: center;
+  max-width: 1300px;
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation: 
+    typing 10s infinite 2s
+}
+
