--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -13,6 +13,14 @@
     top:0;
     
   }
+
+  .container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+  }
+
   .imageCon{
     margin-left: 25px;
   }
@@ -37,6 +45,10 @@
     align-items: center;
     flex-shrink: 0;
     height: 58px;
+    position: relative;
+    top:58px;
+    /* margin-bottom: 20px; */
+    z-index: 300;
     width: 100%;
     border-bottom: 1px solid var(--border-color);
     padding: 0 30px;
@@ -50,6 +62,11 @@
     filter: grayscale(100%);
     align-items: center;
     background-blend-mode: overlay;
+  }
+  @media screen and (max-width: 955px) {
+    .title{
+      font-size: 20px;
+    }
   }
   .message{
     color: white;
