--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -54,18 +54,36 @@
     gap: 1rem;
     margin-bottom: 1rem;
 }
-/*MEDIA QUERIES ( MEDIUM DEVICES )*/
+
 @media screen and ( max-width : 1024px ) {
     .portfolioContainer {
-        grid-template-columns: 1fr 1fr;
+        margin-top: 100px;
+        grid-template-columns: repeat(2,1fr);
+        position: relative;
+        top:90px;
         gap: 1.2em;
     }
 }
- /*MEDIA QUERIES ( small DEVICES )*/
 
-@media screen and ( max-width : 600px ) {
+@media screen and ( max-width : 822px ) {
     .portfolioContainer {
+        margin-top: 1000px;
         grid-template-columns: 1fr;
         gap: 1rem;
+    }
+}
+@media screen and ( max-width : 688px ) {
+    .portfolioContainer {
+        margin-top: 1050px;
+    }
+}
+@media screen and ( max-width : 644px ) {
+    .portfolioContainer {
+        margin-top: 1100px;
+    }
+}
+@media screen and ( max-width : 600px ) {
+    .portfolioContainer {
+        margin-top: 1150px;
     }
 }
