--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,4 +97,125 @@ a {
   animation: 
     typing 10s infinite 2s
 }
-
+@media screen and ( max-width : 1638px ) {
+  .text1{
+    font-size: 40px;
+  }
+}
+@media screen and ( max-width : 1550px ) {
+  .text1{
+    font-size: 38px;
+  }
+}
+@media screen and ( max-width : 1470px ) {
+  .text1{
+    font-size: 36px;
+  }
+}
+@media screen and ( max-width : 1360px ) {
+  .text1{
+    font-size: 34px;
+  }
+}
+@media screen and ( max-width : 1300px ) {
+  .text1{
+    font-size: 32px;
+  }
+}
+@media screen and ( max-width : 1230px ) {
+  .text1{
+    font-size: 30px;
+  }
+}
+@media screen and ( max-width : 1160px ) {
+  .text1{
+    font-size: 28px;
+  }
+}
+@media screen and ( max-width : 1084px ) {
+  .text1{
+    font-size: 26px;
+  }
+}
+@media screen and ( max-width : 1000px ) {
+  .text1{
+    font-size: 24px;
+  }
+}
+@media screen and ( max-width : 952px ) {
+  .text1{
+    font-size: 22px;
+  }
+}
+@media screen and ( max-width : 848px ) {
+  .text1{
+    font-size: 20px;
+  }
+}
+@media screen and ( max-width : 800px ) {
+  .text1{
+    font-size: 18px;
+  }
+}
+@media screen and ( max-width : 746px ) {
+  .text1{
+    font-size: 17px;
+  }
+}
+@media screen and ( max-width : 700px ) {
+  .text1{
+    font-size: 16px;
+  }
+}
+@media screen and ( max-width : 650px ) {
+  .text1{
+    font-size: 15px;
+  }
+}
+@media screen and ( max-width : 600px ) {
+  .text1{
+    font-size: 14px;
+  }
+}
+@media screen and ( max-width : 550px ) {
+  .text1{
+    font-size: 13px;
+  }
+}
+@media screen and ( max-width : 500px ) {
+  .text1{
+    font-size: 12px;
+  }
+}
+@media screen and ( max-width : 450px ) {
+  .text1{
+    font-size: 11px;
+  }
+}
+@media screen and ( max-width : 430px ) {
+  .text1{
+    font-size: 10px;
+  }
+}
+html,
+body {
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  user-select: none;
+  padding-top: 0px;
+  box-sizing: border-box;
+  width: 100%;
+  overflow-x: hidden !important;
+  margin: 0;
+}
+/* @media screen and ( max-width : 909px ) {
+  .text1{
+    font-size: 25px;
+  }
+}
+@media screen and ( max-width : 909px ) {
+  .text1{
+    font-size: 25px;
+  }
+} */
